-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: tools
-
b145
-
generic
-
generic
-
Not verified
The launcher has built-in ergonomics primarily to decide whether to invoke a server or a client vm, and this is based upon detecting the number of cpus and the amount of memory available on the system to decide whether it is server class system in which case the server VM would be chosen, otherwise the client VM.
Noting that 64-bit systems are prevalent now and server VM is the only supported VM on these architectures.
Modern hardware have Hyper-threading and virtual processors which always selects the server VM.
Therefore, the launcher ergonomics is obsolete and its algorithm outdated and simply needs to be removed.
Noting that 64-bit systems are prevalent now and server VM is the only supported VM on these architectures.
Modern hardware have Hyper-threading and virtual processors which always selects the server VM.
Therefore, the launcher ergonomics is obsolete and its algorithm outdated and simply needs to be removed.