8169001: Remove launcher's built-in ergonomics

Reviewed-by: dholmes, erikj